Now using faster FxHashMap.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ ggez = "0.10.0-rc0"
 enum-map = "2.7.3"
 tuple-map = "0.4.0"
 delegate = "0.13.4"
-slab = "0.4.11" 
+slab = "0.4.11"
+rustc-hash = "2.1.1"
